clouds no longer overlapping

--- a/app/assets/stylesheets/components/_landing.scss
+++ b/app/assets/stylesheets/components/_landing.scss
@@ -25,8 +25,8 @@
   background-position: center;
 }
 
-.cloud {
-  z-index: 0;
+#cloud {
+  z-index: 1;
   width: 100vw;
   height: 0px;
   position: relative;
